Bug 136494 - Field in Address Book Source dialog overflows its pane
Summary: Field in Address Book Source dialog overflows its pane
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-09-05 13:00 UTC by Buovjaga
Modified: 2022-12-27 10:55 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
how it looks for me under gen (322.17 KB, image/png)
2020-09-06 18:10 UTC, Caolán McNamara
Details
Screenshot with gtk3 (26.56 KB, image/png)
2020-09-07 06:28 UTC, Buovjaga
Details
Screenshot with another gtk3 (53.37 KB, image/png)
2020-09-07 07:24 UTC, Timur
Details
how it looks for me under gtk (338.44 KB, image/png)
2020-09-07 07:54 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2020-09-05 13:00:58 UTC
1. View - Toolbars - Mail merge
2. Click the "Address Book Source" button in the mail merge toolbar
3. Scroll all the way down in the Field assignment pane

Observe the last field (User 4) getting half overflowed into hiding.

Bibisected with linux-64-6.3 to https://git.libreoffice.org/core/commit/c268527f731fc0764f34ac36c48fd1b6154be80c
weld AddressBookSourceDialog

Adding Cc: to Caolán McNamara

Arch Linux 64-bit
Version: 7.1.0.0.alpha0+
Build ID: bb64b19e3e8942e610db2d3596d859f7c7864811
CPU threads: 8; OS: Linux 5.8; UI render: default; VCL: kf5
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 5 September 2020
Comment 1 milly texas 2020-09-05 14:22:33 UTC Comment hidden (spam)
Comment 2 Caolán McNamara 2020-09-06 18:10:28 UTC
Created attachment 165204 [details]
how it looks for me under gen

I don't see a problem, unless I fail to understand what's wrong.
Comment 3 Buovjaga 2020-09-07 06:28:16 UTC
Created attachment 165211 [details]
Screenshot with gtk3

Ah, sorry, I forgot to mention this is gtk3-only. In fact I probably forgot to even test with other backends.
Comment 4 Timur 2020-09-07 07:24:07 UTC
Created attachment 165216 [details]
Screenshot with another gtk3

I'll set New
Comment 5 Caolán McNamara 2020-09-07 07:54:12 UTC
Created attachment 165218 [details]
how it looks for me under gtk

I assume there is a scrollbar but the contents doesn't scroll all the way down to the end ?
Comment 6 Buovjaga 2020-09-07 10:49:19 UTC
(In reply to Caolán McNamara from comment #5)
> Created attachment 165218 [details]
> how it looks for me under gtk
> 
> I assume there is a scrollbar but the contents doesn't scroll all the way
> down to the end ?

Yes, the scrollbar appears on hover and hides when going out of hover focus.
Comment 7 Caolán McNamara 2020-09-08 13:16:28 UTC
I see it in a Ubuntu vm, seems the empty combobox or label is less tall than one with content. Deferring getting the preferred height until after those are filled makes it do the right thing.
Comment 8 Commit Notification 2020-09-09 09:10:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/23552e1bde1bb4682639847677964334e2576a9e

Resolves: tdf#136494 get preferred height after contents filled in

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2020-09-09 09:13:06 UTC
that works for me with that theme, fixed in master, backport to 7-0 in gerrit
Comment 10 Commit Notification 2020-09-09 10:05:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/68ba390812d302146df267991c4916f457399585

Resolves: tdf#136494 get preferred height after contents filled in

It will be available in 7.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Xisco Faulí 2020-09-29 15:09:43 UTC
@Buovjaga, could you please verify this issue ?