Resolves: tdf#136494 get preferred height after contents filled in

an empty widget appears to be less tall than one with content in the default
Ubuntu theme

Change-Id: I6b759b37d6706e6a4c3ded492d9c5b23f322e328